--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>xxx</li>
-          <li>xxx</li>
-          <li>xxx</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>An array is a single variable that is used to hold a group of data.</li>
+          <li>An array can store multiple items, but can also only contain strings.</li>
+          <li>A for loop uses predictable pattern of indices to perform a task on all items in an array by allowing a single code block to be executed over and over.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li> 
+          <li>A for loop contains 3 important statements: the starting point for a loop, condition (ex. length), and what allows array to iterate over each item (ex x++)</li>
+          <li>A function is a set of instructions to tell computer how to perform a task. Must call a function by name because it does not automatically execute.</li>
         </ul>
       </section>
     </main>
